--- a/index.html
+++ b/index.html
@@ -5,23 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armando's eCommerce Site</title>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
    <header>
     <nav>
         <a href="">CARA CARA</a>
         <ul>
-            <li>HOME</li>
-            <li>ABOUT</li>
-            <li>PRODUCTS</li>
-            <li>CONTACT</li>
+            <li>
+                <a href="#Home">HOME</a>
+            </li>
+            <li>
+                <a href="#About">ABOUT</a>
+            </li>
+            <li>
+                <a href="#Products">PRODUCT</a>
+            </li>
+            <li>
+                <a href="#Contact">CONTACT</a>
+            </li>
         </ul>
-        <a href="">CART</a>
+    </nav>
+    <nav>
+        <b href="">CART</b>
     </nav>
    </header>
    <main>
     <div>
-        <section class="home">
+        <section class="home" id="Home">
             <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="Pottery Hands">
             <h1>CERAMICS CRAFTED BY HAND... ... FROM THE GROUND UP</h1>
         </section>
@@ -44,10 +55,116 @@
     <div>
         <section class="products">
             <h3>OUR PRODUCTS</h3>
-            
+            <div>
+                <div>
+                    <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="3 Ceramic White Bowls">
+                    <a href="">MUNDO BOWLS $48.00</a>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
+                    </p>
+                    <a href="">LEARN MORE</a>
+                    <a href="">ADD TO CART</a>
+                </div>
+                <div>
+                    <img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="Red Ceramic Vase">
+                    <a href="">NATUREZA VASE $37.00</a>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, officiis! Ducimus libero temporibus aliquam dicta iure magni, sequi ex molestiae vel voluptate ratione sunt nemo sed. Reiciendis rem veritatis quidem.
+                    </p>
+                    <a href="">LEARN MORE</a>
+                    <a href="">ADD TO CART</a>
+                </div>
+                <div>
+                    <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="2 Ceramic White Bowls">
+                    <a href="">FEIRA BOWLS $29.00</a>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, quo! Temporibus voluptate corporis quas nihil consectetur quos? Nobis animi error, molestiae exercitationem quaerat recusandae quos, deleniti vitae non sapiente assumenda.
+                    </p>
+                    <a href="">LEARN MORE</a>
+                    <a href="">ADD TO CART</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="2 Brown Ceramic Pots">
+                    <a href="">NATUREZA POTS $59.00</a>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam sapiente assumenda nesciunt magni nisi enim commodi ex, qui neque animi officiis fugiat ad molestias eveniet, quod quae modi corporis sed.
+                    </p>
+                    <a href="">LEARN MORE</a>
+                    <a href="">ADD TO CART</a>
+                </div>
+                <div>
+                    <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="Oblong White Ceramic Vase">
+                    <a href="">PEDRA VASE $31.00</a>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam fugit magni ea, voluptas, quaerat aperiam quas molestiae optio expedita impedit rerum soluta non sapiente facilis porro praesentium omnis dolores odio?
+                    </p>
+                    <a href="">LEARN MORE</a>
+                    <a href="">ADD TO CART</a>
+                </div>
+                <div>
+                    <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="2 Gray Rustic Ceramic Pots">
+                    <a href="">VIAJA POTS $57.00</a>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi enim sunt doloribus numquam, earum exercitationem qui nulla, non, magnam accusamus corporis! Blanditiis nobis nostrum unde. Sed eius ipsa nisi enim!
+                    </p>
+                    <a href="">LEARN MORE</a>
+                    <a href="">ADD TO CART</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="White Cermic Plates">
+                    <a href="">SERVIÇO PLATES $35.00</a>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem reprehenderit, dolorum cumque repellendus numquam aliquam assumenda nulla commodi necessitatibus ea, ipsum tenetur esse laborum dolor vitae. Tempore deserunt obcaecati aspernatur?
+                    </p>
+                    <a href="">LEARN MORE</a>
+                    <a href="">ADD TO CART</a>
+                </div>
+                <div>
+                    <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="Blue Ceramic Vase">
+                    <a href="">CAMPEÃO VASE $37.00</a>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis placeat ratione fugiat modi assumenda rerum odit sint nihil. Ad ea minus dolore sapiente quam, nostrum deleniti iste quasi consequatur inventore!
+                    </p>
+                    <a href="">LEARN MORE</a>
+                    <a href="">ADD TO CART</a>
+                </div>
+                <div>
+                    <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="5 Stacked Ceramic White Bowls">
+                    <a href="">TROCA BOWLS $25.00</a>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem earum iste, doloribus labore doloremque et quidem quaerat natus, veritatis quod repellat, debitis sunt! Facilis officia laboriosam, hic dignissimos fuga est?
+                    </p>
+                    <a href="">LEARN MORE</a>
+                    <a href="">ADD TO CART</a>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div>
+        <section class="contact">
+            <h4>CONTACT US</h4>
+            <p>EMAIL</p>
+            <br>
+            <p>MESSAGE</p>
+            <br>
+            <a href="">SEND</a>
         </section>
     </div>    
    </main>
-   <footer></footer>
+   <footer>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <p>
+        Fuga rerum quo perspiciatis officia molestias architecto minus voluptas tempore ipsa omnis.
+    </p>
+    <p>
+       ©Copyright 2015-2022 
+    </p>
+   </footer>
 </body>
 </html>
