Created basic Nav Bar functionality working in CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
    <header>
     <nav>
-        <a href="">CARA CARA</a>
         <ul>
             <li>
                 <a href="#Home">HOME</a>
@@ -26,8 +25,9 @@
             </li>
         </ul>
     </nav>
+        <a href="#">CARA <img src="./assets/icons8-pottery-96.png"> CARA</a>
     <nav>
-        <b href="">CART</b>
+        <b href="">CART(0)</b>
     </nav>
    </header>
    <main>
@@ -38,7 +38,7 @@
         </section>
     </div>
     <div>
-        <section class="about">
+        <section class="about" id="About">
             <h2>ABOUT US</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod molestiae dolor iste molestias eaque ducimus quos vel tempore. Id, tenetur quidem molestias esse animi laudantium eligendi maxime est obcaecati deserunt. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum temporibus minus pariatur aspernatur exercitationem voluptates harum adipisci maiores quidem dolores officia nisi optio enim, quo doloremque quibusdam molestias impedit sit.
             </p>
@@ -53,7 +53,7 @@
         </section>
     </div>
     <div>
-        <section class="products">
+        <section class="products" id="Products">
             <h3>OUR PRODUCTS</h3>
             <div>
                 <div>
@@ -145,7 +145,7 @@
         </section>
     </div>
     <div>
-        <section class="contact">
+        <section class="contact" id="Contact">
             <h4>CONTACT US</h4>
             <p>EMAIL</p>
             <br>
