Created syles for nav bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </ul>
     </nav>
         <a href="#">CARA <img src="./assets/icons8-pottery-96.png"> CARA</a>
-    <nav>
+    <nav class="search-box search-image">
+        <img src="./assets/1200px-Google_Magnifying_Glass.svg.png"> 
         <b href="">CART(0)</b>
     </nav>
    </header>
