Edited Nav bar styles + Created Home Landing styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <header>
     <nav>
-        <ul>
+        <ul class="navigationUL">
             <li>
                 <a href="#Home">HOME</a>
             </li>
@@ -24,21 +24,27 @@
                 <a href="#Contact">CONTACT</a>
             </li>
         </ul>
+        <a href="#" class="logoLink">
+            CARA 
+                <img src="./assets/icons8-pottery-96.png">
+            CARA
+        </a>
+        <p>
+            <img src="./assets/1200px-Google_Magnifying_Glass.svg.png"> 
+        </p>
+        <a class="cart" href="#">CART(0)</a>
     </nav>
-        <a href="#">CARA <img src="./assets/icons8-pottery-96.png"> CARA</a>
-    <nav class="search-box search-image">
-        <img src="./assets/1200px-Google_Magnifying_Glass.svg.png"> 
-        <b href="">CART(0)</b>
-    </nav>
+    <hr class="nav-line">
    </header>
-   <main>
-    <div>
+   <!--<main>-->
+    <div class="home_img">
         <section class="home" id="Home">
-            <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="Pottery Hands">
-            <h1>CERAMICS CRAFTED BY HAND... ... FROM THE GROUND UP</h1>
+            <h1 class="home_txt1">CERAMICS CRAFTED BY HAND...</h1>
+            <h1 class="home_txt2"> ... FROM THE GROUND UP</h1>
+            <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="Pottery Hands" style="width: 1371px">
         </section>
     </div>
-    <div>
+<div>
         <section class="about" id="About">
             <h2>ABOUT US</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod molestiae dolor iste molestias eaque ducimus quos vel tempore. Id, tenetur quidem molestias esse animi laudantium eligendi maxime est obcaecati deserunt. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum temporibus minus pariatur aspernatur exercitationem voluptates harum adipisci maiores quidem dolores officia nisi optio enim, quo doloremque quibusdam molestias impedit sit.
@@ -53,7 +59,7 @@
             </p>
         </section>
     </div>
-    <div>
+<!--    <div>
         <section class="products" id="Products">
             <h3>OUR PRODUCTS</h3>
             <div>
@@ -166,6 +172,6 @@
     <p>
        ©Copyright 2015-2022 
     </p>
-   </footer>
+   </footer> -->
 </body>
-</html>
+</html> -->
