Created About us styling

--- a/index.html
+++ b/index.html
@@ -44,17 +44,23 @@
             <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="Pottery Hands" style="width: 1371px">
         </section>
     </div>
-<div>
+    <div>
         <section class="about" id="About">
-            <h2>ABOUT US</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod molestiae dolor iste molestias eaque ducimus quos vel tempore. Id, tenetur quidem molestias esse animi laudantium eligendi maxime est obcaecati deserunt. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum temporibus minus pariatur aspernatur exercitationem voluptates harum adipisci maiores quidem dolores officia nisi optio enim, quo doloremque quibusdam molestias impedit sit.
+            <h2 class="about_us">ABOUT US</h2>
+            <hr class="about-line">
+            <p class="about_us_txt">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod molestiae dolor iste molestias eaque ducimus quos vel tempore. Id, tenetur quidem molestias esse animi laudantium eligendi maxime est obcaecati deserunt. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum temporibus minus pariatur aspernatur exercitationem voluptates harum adipisci maiores quidem dolores officia nisi optio enim, quo doloremque quibusdam molestias impedit sit.
             </p>
-            <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="White Ceramic Vase with Brown Frill Plant">
-            <p>
+            <p class="about_us_img2">
+                <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="White Ceramic Vase with Brown Frill Plant" style="width: 601px">
+            </p>
+            <p class="about_us_txt1">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore sint eaque corrupti earum sit alias odit illo qui quaerat enim ea architecto maxime cupiditate iure eligendi sed, fugit libero necessitatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, illo! Delectus, expedita. Expedita, itaque facere. Provident porro, harum est atque dolores dolorem suscipit asperiores error non. Provident repellendus quo ullam.
             </p>
-            <img src="./assets/Vase_Dame_2048x2048.jpg" alt="White Vase with Beads on top and green plant">
-            <p>
+            <p class="about_us_img1">
+                <img src="./assets/Vase_Dame_2048x2048.jpg" alt="White Vase with Beads on top and green plant" style="width: 397px">
+            </p>
+            <p class="about_us_txt2">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quasi consectetur! Reiciendis quo non quibusdam vel nulla labore saepe repudiandae ipsam deserunt nam! Eaque optio harum cumque. Inventore, ab veritatis?
             </p>
         </section>
@@ -172,6 +178,6 @@
     <p>
        ©Copyright 2015-2022 
     </p>
-   </footer> -->
+   </footer> 
 </body>
-</html> -->
+</html> 
