--- a/index.html
+++ b/index.html
@@ -65,99 +65,147 @@
             </p>
         </section>
     </div>
-<!--    <div>
+    <div>
         <section class="products" id="Products">
-            <h3>OUR PRODUCTS</h3>
-            <div>
+            <h3 class="our_products">OUR PRODUCTS</h3>
+            <hr class="our_products_line">
+            <div class="product_container">
                 <div>
-                    <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="3 Ceramic White Bowls">
-                    <a href="">MUNDO BOWLS $48.00</a>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
-                    </p>
-                    <a href="">LEARN MORE</a>
-                    <a href="">ADD TO CART</a>
+                    <div class="product_alignment" id="mundo">
+                        <a href="#mundo">
+                            <img class="product_image" src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="3 Ceramic White Bowls">
+                            MUNDO BOWLS $48.00
+                            <hr class="product_line">
+                        </a>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
+                        </p>
+                        <p class="product_link">
+                            <a href="#mundo">LEARN MORE</a>
+                            <a href="#mundo">ADD TO CART</a>
+                        </p>
+                    </div>
+                    <div class="product_alignment" id="natureza pots">
+                        <a href="#natureza pots">
+                            <img class="product_image" src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="2 Brown Ceramic Pots">
+                            NATUREZA POTS $59.00
+                            <hr class="product_line">
+                        </a>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam sapiente assumenda nesciunt magni nisi enim commodi ex, qui neque animi officiis fugiat ad molestias eveniet, quod quae modi corporis sed.
+                        </p>
+                        <p class="product_link">
+                            <a href="#natureza pots">LEARN MORE</a>
+                            <a href="#natureza pots">ADD TO CART</a>
+                        </p>
+                    </div>
+                    <div class="product_alignment" id="servico plates">
+                        <a href="#servico plates">
+                            <img class="product_image" src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="White Cermic Plates">
+                            SERVIÇO PLATES $35.00
+                            <hr class="product_line">
+                        </a>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem reprehenderit, dolorum cumque repellendus numquam aliquam assumenda nulla commodi necessitatibus ea, ipsum tenetur esse laborum dolor vitae. Tempore deserunt obcaecati aspernatur?
+                        </p>
+                        <p class="product_link">
+                            <a href="#servico plates">LEARN MORE</a>
+                            <a href="#servico plates">ADD TO CART</a>
+                        </p>
+                    </div>
                 </div>
                 <div>
-                    <img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="Red Ceramic Vase">
-                    <a href="">NATUREZA VASE $37.00</a>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, officiis! Ducimus libero temporibus aliquam dicta iure magni, sequi ex molestiae vel voluptate ratione sunt nemo sed. Reiciendis rem veritatis quidem.
-                    </p>
-                    <a href="">LEARN MORE</a>
-                    <a href="">ADD TO CART</a>
+                    <div class="product_alignment" id="natureza vase">
+                        <a href="#natureza vase">
+                            <img class="product_image" src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="Red Ceramic Vase">
+                            NATUREZA VASE $37.00
+                            <hr class="product_line">
+                        </a>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, officiis! Ducimus libero temporibus aliquam dicta iure magni, sequi ex molestiae vel voluptate ratione sunt nemo sed. Reiciendis rem veritatis quidem.
+                        </p>
+                        <p class="product_link">
+                            <a href="#natureza vase">LEARN MORE</a>
+                            <a href="#natureza vase">ADD TO CART</a>
+                        </p>
+                    </div>
+                    <div class="product_alignment" id="pedra vase">
+                        <a href="#pedra vase">
+                            <img class="product_image" src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="Oblong White Ceramic Vase">
+                            PEDRA VASE $31.00
+                            <hr class="product_line">
+                        </a>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam fugit magni ea, voluptas, quaerat aperiam quas molestiae optio expedita impedit rerum soluta non sapiente facilis porro praesentium omnis dolores odio?
+                        </p>
+                        <p class="product_link">
+                            <a href="#pedra vase">LEARN MORE</a>
+                            <a href="#pedra vase">ADD TO CART</a>
+                        </p>
+                    </div>
+                    <div class="product_alignment" id="campeao vase">
+                        <a href="#campeao vase">
+                            <img class="product_image" src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="Blue Ceramic Vase">
+                            CAMPEÃO VASE $37.00
+                            <hr class="product_line">
+                        </a>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis placeat ratione fugiat modi assumenda rerum odit sint nihil. Ad ea minus dolore sapiente quam, nostrum deleniti iste quasi consequatur inventore!
+                        </p>
+                        <p class="product_link">
+                            <a href="#campeao vase">LEARN MORE</a>
+                            <a href="#campeao vase">ADD TO CART</a>
+                        </p>
+                    </div>
                 </div>
                 <div>
-                    <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="2 Ceramic White Bowls">
-                    <a href="">FEIRA BOWLS $29.00</a>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, quo! Temporibus voluptate corporis quas nihil consectetur quos? Nobis animi error, molestiae exercitationem quaerat recusandae quos, deleniti vitae non sapiente assumenda.
-                    </p>
-                    <a href="">LEARN MORE</a>
-                    <a href="">ADD TO CART</a>
+                    <div class="product_alignment" id="feira bowls">
+                        <a href="#feira bowls">
+                            <img class="product_image" src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="2 Ceramic White Bowls">
+                            FEIRA BOWLS $29.00
+                            <hr class="product_line">
+                        </a>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, quo! Temporibus voluptate corporis quas nihil consectetur quos? Nobis animi error, molestiae exercitationem quaerat recusandae quos, deleniti vitae non sapiente assumenda.
+                        </p>
+                        <p class="product_link">
+                            <a href="#feira bowls">LEARN MORE</a>
+                            <a href="#feira bowls">ADD TO CART</a>
+                        </p>
+                    </div>
+                    <div class="product_alignment" id="viaja pots">
+                        <a href="#viaja pots">
+                            <img class="product_image" src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="2 Gray Rustic Ceramic Pots">
+                            VIAJA POTS $57.00
+                            <hr class="product_line">
+                        </a>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi enim sunt doloribus numquam, earum exercitationem qui nulla, non, magnam accusamus corporis! Blanditiis nobis nostrum unde. Sed eius ipsa nisi enim!
+                        </p>
+                        <p class="product_link">
+                            <a href="#viaja pots">LEARN MORE</a>
+                            <a href="#viaja pots">ADD TO CART</a>
+                        </p>
+                    </div>
+                    <div class="product_alignment" id="troca bowls">
+                        <a href="#troca bowls">
+                            <img class="product_image" src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="5 Stacked Ceramic White Bowls">
+                            TROCA BOWLS $25.00
+                            <hr class="product_line">
+                        </a>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem earum iste, doloribus labore doloremque et quidem quaerat natus, veritatis quod repellat, debitis sunt! Facilis officia laboriosam, hic dignissimos fuga est?
+                        </p>
+                        <p class="product_link">
+                            <a href="#troca bowls">LEARN MORE</a>
+                            <a href="#troca bowls">ADD TO CART</a>
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <div>
-                    <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="2 Brown Ceramic Pots">
-                    <a href="">NATUREZA POTS $59.00</a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam sapiente assumenda nesciunt magni nisi enim commodi ex, qui neque animi officiis fugiat ad molestias eveniet, quod quae modi corporis sed.
-                    </p>
-                    <a href="">LEARN MORE</a>
-                    <a href="">ADD TO CART</a>
-                </div>
-                <div>
-                    <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="Oblong White Ceramic Vase">
-                    <a href="">PEDRA VASE $31.00</a>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam fugit magni ea, voluptas, quaerat aperiam quas molestiae optio expedita impedit rerum soluta non sapiente facilis porro praesentium omnis dolores odio?
-                    </p>
-                    <a href="">LEARN MORE</a>
-                    <a href="">ADD TO CART</a>
-                </div>
-                <div>
-                    <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="2 Gray Rustic Ceramic Pots">
-                    <a href="">VIAJA POTS $57.00</a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi enim sunt doloribus numquam, earum exercitationem qui nulla, non, magnam accusamus corporis! Blanditiis nobis nostrum unde. Sed eius ipsa nisi enim!
-                    </p>
-                    <a href="">LEARN MORE</a>
-                    <a href="">ADD TO CART</a>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="White Cermic Plates">
-                    <a href="">SERVIÇO PLATES $35.00</a>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem reprehenderit, dolorum cumque repellendus numquam aliquam assumenda nulla commodi necessitatibus ea, ipsum tenetur esse laborum dolor vitae. Tempore deserunt obcaecati aspernatur?
-                    </p>
-                    <a href="">LEARN MORE</a>
-                    <a href="">ADD TO CART</a>
-                </div>
-                <div>
-                    <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="Blue Ceramic Vase">
-                    <a href="">CAMPEÃO VASE $37.00</a>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis placeat ratione fugiat modi assumenda rerum odit sint nihil. Ad ea minus dolore sapiente quam, nostrum deleniti iste quasi consequatur inventore!
-                    </p>
-                    <a href="">LEARN MORE</a>
-                    <a href="">ADD TO CART</a>
-                </div>
-                <div>
-                    <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="5 Stacked Ceramic White Bowls">
-                    <a href="">TROCA BOWLS $25.00</a>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem earum iste, doloribus labore doloremque et quidem quaerat natus, veritatis quod repellat, debitis sunt! Facilis officia laboriosam, hic dignissimos fuga est?
-                    </p>
-                    <a href="">LEARN MORE</a>
-                    <a href="">ADD TO CART</a>
-                </div>
-            </div>
+            </div>    
         </section>
     </div>
-    <div>
+<!--    <div>
         <section class="contact" id="Contact">
             <h4>CONTACT US</h4>
             <p>EMAIL</p>
