Edited Contact section in HTML + Created Contact Section Styles in CSS

--- a/index.html
+++ b/index.html
@@ -205,18 +205,27 @@
             </div>    
         </section>
     </div>
-<!--    <div>
+    <div>
         <section class="contact" id="Contact">
-            <h4>CONTACT US</h4>
-            <p>EMAIL</p>
-            <br>
-            <p>MESSAGE</p>
-            <br>
-            <a href="">SEND</a>
+            <h4 class="contact_us">CONTACT US</h4>
+            <hr class="contact_us_line">
+            <div class="contact_position">
+                <div>
+                    <p>EMAIL</p>
+                    <input class="email_box" type="text" placeholder="Email">
+                </div>
+                <div>
+                    <p>MESSAGE</p>
+                    <input class="message_box" type="text" placeholder="Message">
+                    <div>
+                        <a class="send_button" href="">SEND</a>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>    
    </main>
-   <footer>
+<!--   <footer>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit.
     </p>
