Edited Footer Section in HTML + Created Footer Section Sytles in CSS

--- a/index.html
+++ b/index.html
@@ -225,16 +225,31 @@
         </section>
     </div>    
    </main>
-<!--   <footer>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-    </p>
-    <p>
-        Fuga rerum quo perspiciatis officia molestias architecto minus voluptas tempore ipsa omnis.
-    </p>
-    <p>
-       ©Copyright 2015-2022 
-    </p>
+   <footer>
+    <div class="footer_icons">
+        <a href=""><img src="./assets/icons8-youtube-96.png" alt="youtube"></a>
+        <a href=""><img src="./assets/icons8-facebook-96 (1).png" alt="facebook"></a>
+        <div>
+            <a href="" class="logoLink footer_logo_spacing">
+                CARA 
+                <img src="./assets/icons8-pottery-96 (1).png">
+                CARA
+            </a>    
+        </div>
+        <a href=""><img src="./assets/icons8-twitter-96.png" alt="twitter"></a>
+        <a href=""><img src="./assets/icons8-instagram-96.png" alt="instagram"></a>
+    </div>
+    <div class="footer_text">
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        </p>
+        <p>
+            Fuga rerum quo perspiciatis officia molestias architecto minus voluptas tempore ipsa omnis.
+        </p>
+        <p>
+           ©Copyright 2015-2022 
+        </p>
+    </div>
    </footer> 
 </body>
 </html> 
