--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <hr class="nav-line">
    </header>
    <!--<main>-->
-    <div class="home_img">
+    <div class="home_img_background">
         <section class="home" id="Home">
             <h1 class="home_txt1">CERAMICS CRAFTED BY HAND...</h1>
             <h1 class="home_txt2"> ... FROM THE GROUND UP</h1>
-            <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="Pottery Hands" style="width: 1371px">
+            <img class="home_image" src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="Pottery Hands">
         </section>
     </div>
     <div>
@@ -51,14 +51,14 @@
             <p class="about_us_txt">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod molestiae dolor iste molestias eaque ducimus quos vel tempore. Id, tenetur quidem molestias esse animi laudantium eligendi maxime est obcaecati deserunt. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum temporibus minus pariatur aspernatur exercitationem voluptates harum adipisci maiores quidem dolores officia nisi optio enim, quo doloremque quibusdam molestias impedit sit.
             </p>
-            <p class="about_us_img2">
-                <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="White Ceramic Vase with Brown Frill Plant" style="width: 601px">
+            <p>
+                <img class="about_us_img2" src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="White Ceramic Vase with Brown Frill Plant">
             </p>
             <p class="about_us_txt1">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore sint eaque corrupti earum sit alias odit illo qui quaerat enim ea architecto maxime cupiditate iure eligendi sed, fugit libero necessitatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, illo! Delectus, expedita. Expedita, itaque facere. Provident porro, harum est atque dolores dolorem suscipit asperiores error non. Provident repellendus quo ullam.
             </p>
-            <p class="about_us_img1">
-                <img src="./assets/Vase_Dame_2048x2048.jpg" alt="White Vase with Beads on top and green plant" style="width: 397px">
+            <p>
+                <img class="about_us_img1" src="./assets/Vase_Dame_2048x2048.jpg" alt="White Vase with Beads on top and green plant">
             </p>
             <p class="about_us_txt2">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quasi consectetur! Reiciendis quo non quibusdam vel nulla labore saepe repudiandae ipsam deserunt nam! Eaque optio harum cumque. Inventore, ab veritatis?
@@ -92,7 +92,7 @@
                             <hr class="product_line">
                         </a>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam sapiente assumenda nesciunt magni nisi enim commodi ex, qui neque animi officiis fugiat ad molestias eveniet, quod quae modi corporis sed.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
                         </p>
                         <p class="product_link">
                             <a href="#natureza pots">LEARN MORE</a>
@@ -106,7 +106,7 @@
                             <hr class="product_line">
                         </a>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem reprehenderit, dolorum cumque repellendus numquam aliquam assumenda nulla commodi necessitatibus ea, ipsum tenetur esse laborum dolor vitae. Tempore deserunt obcaecati aspernatur?
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
                         </p>
                         <p class="product_link">
                             <a href="#servico plates">LEARN MORE</a>
@@ -122,7 +122,7 @@
                             <hr class="product_line">
                         </a>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, officiis! Ducimus libero temporibus aliquam dicta iure magni, sequi ex molestiae vel voluptate ratione sunt nemo sed. Reiciendis rem veritatis quidem.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
                         </p>
                         <p class="product_link">
                             <a href="#natureza vase">LEARN MORE</a>
@@ -136,7 +136,7 @@
                             <hr class="product_line">
                         </a>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam fugit magni ea, voluptas, quaerat aperiam quas molestiae optio expedita impedit rerum soluta non sapiente facilis porro praesentium omnis dolores odio?
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
                         </p>
                         <p class="product_link">
                             <a href="#pedra vase">LEARN MORE</a>
@@ -150,7 +150,7 @@
                             <hr class="product_line">
                         </a>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis placeat ratione fugiat modi assumenda rerum odit sint nihil. Ad ea minus dolore sapiente quam, nostrum deleniti iste quasi consequatur inventore!
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
                         </p>
                         <p class="product_link">
                             <a href="#campeao vase">LEARN MORE</a>
@@ -166,7 +166,7 @@
                             <hr class="product_line">
                         </a>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, quo! Temporibus voluptate corporis quas nihil consectetur quos? Nobis animi error, molestiae exercitationem quaerat recusandae quos, deleniti vitae non sapiente assumenda.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
                         </p>
                         <p class="product_link">
                             <a href="#feira bowls">LEARN MORE</a>
@@ -180,7 +180,7 @@
                             <hr class="product_line">
                         </a>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi enim sunt doloribus numquam, earum exercitationem qui nulla, non, magnam accusamus corporis! Blanditiis nobis nostrum unde. Sed eius ipsa nisi enim!
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
                         </p>
                         <p class="product_link">
                             <a href="#viaja pots">LEARN MORE</a>
@@ -194,7 +194,7 @@
                             <hr class="product_line">
                         </a>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem earum iste, doloribus labore doloremque et quidem quaerat natus, veritatis quod repellat, debitis sunt! Facilis officia laboriosam, hic dignissimos fuga est?
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor aspernatur, quod aliquam molestiae amet ex voluptatem atque sapiente animi quibusdam dolore consectetur maxime blanditiis nobis sit qui provident error quis?
                         </p>
                         <p class="product_link">
                             <a href="#troca bowls">LEARN MORE</a>
